--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "^4.17.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.5.11"
+    "mongoose": "^5.5.11",
+    "mongoose-aggregate-paginate-v2": "^1.0.2",
+    "mongoose-paginate": "^5.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
