--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.truncate": "^4.4.2",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
+    "pusher-js": "^5.0.0",
     "quill": "^1.3.6",
     "vee-validate": "^2.0.9",
     "vue": "^2.5.16",
