--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "vue-quill-editor": "^3.0.6",
     "vue-resize": "^0.4.4",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.1.0-alpha.5"
+    "vuetify": "^1.1.0-alpha.5",
+    "vuetify-audio": "^0.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
